Move fixed navigation z-index top limit to 10000, since 1000 and 1001 are being used by vega-lite.

--- a/funnel/assets/sass/components/_subnavbar.scss
+++ b/funnel/assets/sass/components/_subnavbar.scss
@@ -20,7 +20,7 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 1000;
+    z-index: 10000;
     border-bottom: none;
     box-shadow: 0 1px 3px rgba(158, 158, 158, 0.12), 0 1px 2px rgba(158, 158, 158, 0.24);
   }
@@ -48,7 +48,7 @@
     position: sticky;
     top: $mui-header-height;
     order: 1;
-    z-index: 3;
+    z-index: 10000;
     margin-top: 0;
   }
 
